<resources>
    <string name="app_name">AndroidUdacityPro0</string>
    <string name="action_settings">Settings</string>
    <string name="app_title_text_view">My Nanodegree Apps!</string>
    <string name="spotify_streamer_button">spotify streamer</string>
    <string name="scores_app_button">scores app</string>
    <string name="library_app_button">library app</string>
    <string name="build_it_bigger_button">build it bigger</string>
    <string name="xyz_reader_button">xyz reader</string>
    <string name="capstone_my_own_app_button">capstone:my own app</string>
    <string name="title_main_activity">My App Protfolio</string>
</resources>
