<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cn.hophin.shfy.androidudacitypro0.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="6dp"
        android:text="@string/app_title_text_view" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/spotify_streamer_button"
            style="@style/btnStyleOrange"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer_button" />

        <Button
            android:id="@+id/scores_app_button"
            style="@style/btnStyleOrange"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/scores_app_button" />

        <Button
            android:id="@+id/library_app_button"
            style="@style/btnStyleOrange"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/library_app_button" />

        <Button
            android:id="@+id/build_it_bigger_button"
            style="@style/btnStyleOrange"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger_button" />

        <Button
            android:id="@+id/xyz_reader_button"
            style="@style/btnStyleOrange"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader_button" />

        <Button
            android:id="@+id/capstone_my_own_app_button"
            style="@style/btnStyleSeagull"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/capstone_my_own_app_button" />


    </LinearLayout>
</LinearLayout>
